# nn-demo-via-chatgpt

./: LICENSE  README.md  app.py  nn.py  pyproject.toml
chat_gpt_answers/: build_nn_from_scratch.py  streamlit_app.py
playground/: nn.py  nn_converges.py
src/: app.py  nn_from_scratch.py
