[tool.poetry]
name = "demo app via chatgpt"
version = "0.1.0"
description = ""
authors = ["CarstenFrommhold <carsten.frommhold@datadrivers.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
streamlit = "^1.18.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
